@@ -16,7 +16,8 @@ Also, as a by-product of the design, it is remarkably easy to extend
 and add functionality.
 
 Sqsh was developped by Scott C. Gray, and is currently maintained by
-Michael Peppler (mpeppler@peppler.org)
+Michael Peppler (mpeppler@peppler.org) and also by Martin Wesdorp
+(mwesdorp@users.sourceforge.net).
 
 Availability
 -=-=-=-=-=-=-
