@@ -38,6 +38,6 @@ INSERT INTO dsp_test VALUES (
  "11/03/69 04:35am",
  $1237362.32,
  $1233.99,
- 3.14837,
- 99283.1328273)
+ 3.148,
+ 99283.132)
 go
